# git-interactive-rebase-tool

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile.toml  README.md  THIRD_PARTY_LICENSES  about.toml  appveyor.yml  build.rs  git-interactive-rebase-tool.1  ignored-lints.txt  test.git-text
src/config/: CHANGELOG.md  Cargo.toml  README.md  color.rs  config.rs  config_loader.rs  diff_ignore_whitespace_setting.rs  diff_show_whitespace_setting.rs  errors.rs  git_config.rs  key_bindings.rs  migration-guide.md  mod.rs  tests.rs  testutil.rs  testutils.rs  theme.rs  utils.rs
src/config/errors/: config_error_cause.rs  invalid_color.rs
src/config/src/: color.rs  diff_ignore_whitespace_setting.rs  diff_show_whitespace_setting.rs  git_config.rs  key_bindings.rs  lib.rs  tests.rs  testutil.rs  testutils.rs  theme.rs  utils.rs
src/config/src/errors/: config_error_cause.rs  invalid_color.rs  mod.rs
src/config/src/utils/: get_bool.rs  get_diff_ignore_whitespace.rs  get_diff_rename.rs  get_diff_show_whitespace.rs  get_input.rs  get_string.rs  get_unsigned_integer.rs  mod.rs
src/config/utils/: get_bool.rs  get_diff_ignore_whitespace.rs  get_diff_rename.rs  get_diff_show_whitespace.rs  get_input.rs  get_string.rs  get_unsigned_integer.rs
src/core/: Cargo.toml  README.md  arguments.rs  build.rs  exit.rs  help.rs  license.rs  main.rs  mod.rs  tests.rs  version.rs
src/core/components/: testutil.rs
src/core/components/choice/: mod.rs  tests.rs
src/core/components/confirm/: mod.rs
src/core/components/help/: mod.rs  tests.rs
src/core/module/: mod.rs  modules.rs  process_result.rs
src/core/modules/: mod.rs
src/core/modules/confirm_abort/: mod.rs
src/core/modules/confirm_rebase/: mod.rs
src/core/modules/error/: mod.rs
src/core/modules/external_editor/: action.rs  external_editor_state.rs  mod.rs  tests.rs
src/core/modules/insert/: line_type.rs  mod.rs  tests.rs
src/core/modules/list/: input.rs  mod.rs  tests.rs
src/core/modules/show_commit/: commit.rs  delta.rs  diff_line.rs  file_stat.rs  file_stats_builder.rs  mod.rs  show_commit_state.rs  tests.rs  view_builder.rs
src/core/modules/window_size_error/: mod.rs
src/core/process/: mod.rs  tests.rs
src/core/src/: application.rs  arguments.rs  config.rs  display.rs  editor.rs  events.rs  git.rs  help.rs  lib.rs  license.rs  module.rs  modules.rs  process.rs  run.rs  tests.rs  todo_file.rs  util.rs  version.rs  view.rs
src/core/src/components/: choice.rs  confirm.rs  edit.rs  help.rs  mod.rs  search_bar.rs  spin_indicator.rs  testutil.rs
src/core/src/config/: color.rs  diff_show_whitespace_setting.rs  git_config.rs  key_bindings.rs  theme.rs
src/core/src/display/: crossterm.rs  size.rs  utils.rs
src/core/src/events/: action_event.rs  app_key_bindings.rs  (+2 more)
src/core/testutil/: assert_process_result.rs  module_test.rs
src/display/: Cargo.toml  README.md  color.rs  color_manager.rs  color_mode.rs  crossterm.rs  curses.rs  display.rs  display_color.rs  error.rs  mockcrossterm.rs  mod.rs  ncurses.rs  size.rs  testutil.rs  tui.rs  utils.rs  virtual_curses.rs
src/display/src/: color_mode.rs  crossterm.rs  display_color.rs  error.rs  lib.rs  mockcrossterm.rs  size.rs  testutil.rs  tui.rs  utils.rs
src/display/testutil/: mockable_tui.rs  mockcrossterm.rs
src/git/: Cargo.toml  README.md  commit.rs  commit_diff.rs  commit_diff_loader.rs  commit_diff_loader_options.rs  delta.rs  diff_line.rs  errors.rs  file_status.rs  file_status_builder.rs  origin.rs  reference.rs  reference_kind.rs  repository.rs  status.rs  testutil.rs  user.rs
src/git/src/: commit.rs  commit_diff.rs  commit_diff_loader.rs  commit_diff_loader_options.rs  delta.rs  diff_line.rs  file_mode.rs  file_status.rs  file_status_builder.rs  lib.rs  origin.rs  reference.rs  reference_kind.rs  repository.rs  status.rs  testutil.rs  user.rs
src/git/testutil/: build_commit.rs  build_commit_diff.rs  build_file_status.rs  build_reference.rs  create_commit.rs  with_temp_repository.rs
src/input/: Cargo.toml  README.md  event.rs  event_handler.rs  event_provider.rs  input.rs  input_handler.rs  input_options.rs  key_bindings.rs  key_event.rs  map_keybindings.rs  meta_event.rs  mod.rs  standard_event.rs  testutil.rs  thread.rs  utils.rs
src/input/src/: custom_event.rs  custom_key_binding.rs  event.rs  event_action.rs  event_handler.rs  event_provider.rs  input_options.rs  key_bindings.rs  key_event.rs  lib.rs  meta_event.rs  sender.rs  standard_event.rs  testutil.rs  thread.rs
src/input/thread/: state.rs
src/runtime/: Cargo.toml  build.rs  errors.rs  installer.rs  notifier.rs  runtime.rs  status.rs  testutils.rs  thread_statuses.rs  threadable.rs
src/runtime/src/: installer.rs  lib.rs  notifier.rs  status.rs  testutils.rs  thread_statuses.rs  threadable.rs
src/testutils/: Cargo.toml  Makefile.toml
src/testutils/src/: assert_empty.rs  assert_err_eq.rs  assert_not_empty.rs  lib.rs
src/todo_file/: Cargo.toml  README.md  action.rs  edit_content.rs  errors.rs  history.rs  line.rs  line_parser.rs  mod.rs  search.rs  state.rs  testutil.rs  todo_file_options.rs  utils.rs
src/todo_file/errors/: io.rs
src/todo_file/history/: history_item.rs  mod.rs  operation.rs  tests.rs
src/todo_file/src/: action.rs  edit_content.rs  history.rs  lib.rs  line.rs  line_parser.rs  search.rs  testutil.rs  todo_file_options.rs  utils.rs  version.rs
src/view/: CHANGELOG.md  Cargo.toml  README.md  action.rs  line_segment.rs  mod.rs  render_context.rs  render_slice.rs  scroll_position.rs  sender.rs  tests.rs  testutil.rs  thread.rs  util.rs  utils.rs  view.rs  view_data.rs  view_data_updater.rs  view_line.rs  view_lines.rs
src/view/render_slice/: mod.rs  render_action.rs  tests.rs
src/view/src/: action.rs  lib.rs  line_segment.rs  render_context.rs  scroll_position.rs  sender.rs  tests.rs  testutil.rs  thread.rs  util.rs  view_data.rs  view_data_updater.rs  view_line.rs
src/view/testutil/: assert_rendered_output.rs  render_view_line.rs
src/view/thread/: action.rs  state.rs
(+670 files in other folders)
