[package]
name = "git-interactive-rebase-tool"
version = "2.3.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Full feature terminal based sequence editor for git interactive rebase."
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
keywords = [ "git", "editor", "tool", "rebase", "cli" ]
categories = ["command-line-interface", "command-line-utilities", "text-editors"]
readme = "README.md"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE",
    "/readme",
    "/README.md"
]
edition = "2021"

[[bin]]
name = "interactive-rebase-tool"
path = "src/main.rs"

[workspace]
members = [
    "src/config",
    "src/core",
    "src/git",
    "src/runtime",
    "src/testutils",
    "src/todo_file"
]

[dependencies]
girt-core = {version = "2.3.0", path = "src/core"}

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = []
dev = []

[profile.release]
incremental = true
debug = 0
lto = true
codegen-units = 1

[package.metadata.deb]
license-file = ["LICENSE"]
extended-description = """\
Full feature terminal based sequence editor for git interactive rebase."""
section = "utility"
priority = "optional"
assets = [
    ["target/release/interactive-rebase-tool", "usr/bin/interactive-rebase-tool", "755"],
    ["README.md", "usr/share/doc/interactive-rebase-tool/", "644"],
    ["readme/**/*.md", "usr/share/doc/interactive-rebase-tool/readme/", "644"],
    ["CHANGELOG.md", "usr/share/doc/interactive-rebase-tool/", "644"],
    ["src/interactive-rebase-tool.1", "usr/share/man/man1/interactive-rebase-tool.1", "644"]
]
