[package]
name = "girt-config"
version = "1.0.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Configuration for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "config"]
categories = ["command-line-interface", "command-line-utilities", "config"]
readme = "README.md"

[lib]
name = "config"

[dependencies]
anyhow = "1.0"
girt-git = {version = "0.2.0", path = "../../src/git"}

[dev-dependencies]
lazy_static = "1.4.0"
rstest = "0.12.0"
serial_test = "0.5.1"
tempfile = "3.3.0"

[build-dependencies]
rustc_version = "0.4.0"
