[package]
name = "girt-config"
version = "2.2.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Configuration for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "config"]
categories = ["command-line-interface", "command-line-utilities", "config"]
readme = "README.md"

[lib]
name = "config"

[dependencies]
thiserror = "1.0.38"
girt-git = {version = "2.2.0", path = "../../src/git"}
proc-macro2 = "1.0.64" # TODO: remove override of indirect dependency

[dev-dependencies]
claim = { git = "https://github.com/Turbo87/rust-claim.git", rev = "23892a3" }
lazy_static = "1.4.0"
rstest = "0.16.0"
serial_test = "0.10.0"
tempfile = "3.3.0"
girt-testutils = {version = "0.1.0", path = "../testutils"}

[build-dependencies]
rustc_version = "0.4.0"
