[package]
name = "girt-config"
version = "2.3.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Configuration for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "config"]
categories = ["command-line-interface", "command-line-utilities", "config"]
readme = "README.md"

[lib]
name = "config"

[dependencies]
thiserror = "1.0.43"
girt-git = {version = "2.3.0", path = "../../src/git"}

[dev-dependencies]
claims = "0.7.1"
lazy_static = "1.4.0"
rstest = "0.18.1"
serial_test = "2.0.0"
tempfile = "3.6.0"
girt-testutils = {version = "2.3.0", path = "../testutils"}

[build-dependencies]
rustc_version = "0.4.0"
