[package]
name = "girt-core"
version = "2.2.1"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Core modules for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "cli"]
categories = ["command-line-interface", "command-line-utilities", "text-editors"]
readme = "README.md"

[lib]
name = "core"

[dependencies]
anyhow = "1.0.71"
bitflags = "1.3.2"
captur = "0.1.0"
crossbeam-channel = "0.5.8"
if_chain = "1.0.2"
lazy_static = "1.4.0"
num-format = "0.4.4"
parking_lot = "0.12.1"
pico-args = "0.5.0"
unicode-segmentation = "1.10.1"
girt-config = {version = "2.2.0", path = "../../src/config"}
girt-display = {version = "2.2.0", path = "../../src/display"}
girt-git = {version = "2.2.0", path = "../../src/git"}
girt-input = {version = "2.2.0", path = "../../src/input"}
girt-runtime = {version = "0.1.0", path = "../runtime"}
girt-todo-file = {version = "2.2.0", path = "../../src/todo_file"}
girt-view = {version = "2.2.0", path = "../../src/view"}

[dev-dependencies]
claim = { git = "https://github.com/Turbo87/rust-claim.git", rev = "23892a3" }
pretty_assertions = "1.3.0"
rstest = "0.16.0"
serial_test = "2.0.0"
girt-view = {version = "2.2.0", path = "../../src/view", features = ["testutils"]}

[build-dependencies]
chrono = "0.4.23"
rustc_version = "0.4.0"
