[package]
name = "girt-core"
version = "2.3.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Core modules for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "cli"]
categories = ["command-line-interface", "command-line-utilities", "text-editors"]
readme = "README.md"

[lib]
name = "gcore"

[dependencies]
anyhow = "1.0.72"
bitflags = "2.4.2"
captur = "0.1.0"
chrono = "0.4.26"
crossbeam-channel = "0.5.8"
crossterm = "0.26.1"
git2 = { version = "0.17.2", default-features = false, features = []}
if_chain = "1.0.2"
lazy_static = "1.4.0"
num-format = "0.4.4"
parking_lot = "0.12.1"
pico-args = "0.5.0"
thiserror = "1.0.56"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.10"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
version-track = "0.1.0"
xi-unicode = "0.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.26.1", features = ["use-dev-tty"] }

[dev-dependencies]
claims = "0.7.1"
itertools = "0.12.1"
pretty_assertions = "1.4.0"
regex = "1.8.3"
rstest = "0.18.1"
serial_test = "2.0.0"
tempfile = "3.7.0"
girt-testutils = {version = "2.3.0", path = "../testutils"}

[build-dependencies]
chrono = "0.4.26"
rustc_version = "0.4.0"
