[package]
name = "girt-display"
version = "2.2.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Display modules for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "cli"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[lib]
name = "display"

[dependencies]
crossterm = "0.25.0"
thiserror = "1.0.37"
girt-config = {version = "2.2.0", path = "../config"}

[dev-dependencies]
rstest = "0.16.0"
serial_test = "0.9.0"

[build-dependencies]
rustc_version = "0.4.0"
