[package]
name = "girt-git"
version = "2.2.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Git module for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[lib]
name = "git"

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
tempfile = "3.3.0"

[dependencies.git2]
version = "=0.14.4"
default-features = false
features = []

[dev-dependencies]
pretty_assertions = "1.2.1"
rstest = "0.11.0"
serial_test = "0.6.0"

[build-dependencies]
rustc_version = "0.4.0"
