[package]
name = "girt-git"
version = "2.2.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Git module for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[lib]
name = "git"

[dependencies]
chrono = "0.4.22"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
tempfile = "3.3.0"
thiserror = "1.0.34"

[dependencies.git2]
version = "=0.15.0"
default-features = false
features = []

[dev-dependencies]
claim = { git = "https://github.com/Turbo87/rust-claim.git", rev = "23892a3" }
pretty_assertions = "1.2.1"
rstest = "0.15.0"
serial_test = "0.9.0"
girt-testutils = {version = "0.1.0", path = "../testutils"}

[build-dependencies]
rustc_version = "0.4.0"
