[package]
name = "girt-input"
version = "2.2.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Input module for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "input"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[lib]
name = "input"

[dependencies]
anyhow = "1.0"
bitflags = "1.3.2"
captur = "0.1.0"
crossbeam-channel = "0.5.5"
crossterm = "0.23.2"
parking_lot = "0.12.1"
girt-config = {version = "2.2.0", path = "../config"}
girt-runtime = {version = "0.1.0", path = "../runtime"}

[dev-dependencies]
rstest = "0.15.0"

[build-dependencies]
rustc_version = "0.4.0"
