[package]
name = "girt-input"
version = "2.3.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Input module for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "input"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[lib]
name = "input"

[dependencies]
anyhow = "1.0"
bitflags = "1.3.2"
captur = "0.1.0"
crossbeam-channel = "0.5.8"
crossterm = "0.26.1"
parking_lot = "0.12.1"
girt-config = {version = "2.3.0", path = "../config"}
girt-runtime = {version = "2.3.0", path = "../runtime"}

# Fix tty issues on MacOS
[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.26.1", features = ["use-dev-tty"] }

[dev-dependencies]
rstest = "0.18.1"
lazy_static = "1.4.0"
serial_test = "2.0.0"

[build-dependencies]
rustc_version = "0.4.0"
