[package]
name = "girt-runtime"
version = "0.1.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Core modules for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "cli"]
categories = ["command-line-interface", "command-line-utilities", "text-editors"]
readme = "../../README.md"

[lib]
name = "runtime"

[dependencies]
thiserror = "1.0.37"
crossbeam-channel = "0.5.6"
parking_lot = "0.12.1"

[dev-dependencies]
claim = { git = "https://github.com/Turbo87/rust-claim.git", rev = "23892a3" }
girt-testutils = {version = "0.1.0", path = "../testutils"}

[build-dependencies]
rustc_version = "0.4.0"
