[package]
name = "girt-runtime"
version = "2.3.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Core modules for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "cli"]
categories = ["command-line-interface", "command-line-utilities", "text-editors"]
readme = "../../README.md"

[lib]
name = "runtime"

[dependencies]
thiserror = "1.0.43"
crossbeam-channel = "0.5.8"
parking_lot = "0.12.1"

[dev-dependencies]
claims = "0.7.1"
girt-testutils = {version = "2.3.0", path = "../testutils"}

[build-dependencies]
rustc_version = "0.4.0"
