[package]
name = "girt-testutils"
version = "0.1.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Test utils for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "cli"]
categories = ["command-line-interface", "command-line-utilities", "text-editors"]
readme = "../../README.md"

[lib]
name = "testutils"

[dependencies]
[dev-dependencies]

[build-dependencies]
rustc_version = "0.4.0"
