[package]
name = "girt-todo-file"
version = "2.3.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "Todo file systems for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[lib]
name = "todo_file"

[dependencies]
tempfile = "3.6.0"
thiserror = "1.0.43"
version-track = "0.1.0"

[dev-dependencies]
claim = { git = "https://github.com/Turbo87/rust-claim.git", rev = "23892a3" }
pretty_assertions = "1.4.0"
rstest = "0.18.1"
tempfile = "3.6.0"
girt-testutils = {version = "2.3.0", path = "../testutils"}

[build-dependencies]
rustc_version = "0.4.0"

