[package]
name = "girt-view"
version = "1.1.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "View modules for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "view"]
categories = ["command-line-interface", "command-line-utilities", "text-editors"]
readme = "README.md"

[lib]
name = "view"

[dependencies]
anyhow = "1.0.56"
bitflags = "1.3.2"
crossbeam-channel = "0.5.4"
girt-display = {version = "1.0.0", path = "../display"}
parking_lot = "0.12.0"
unicode-segmentation = "1.9.0"
unicode-width = "0.1.9"
xi-unicode = "0.3.0"

[dependencies.uuid]
version = "1.0.0"
features = ["v4", "fast-rng"]

[dev-dependencies]
girt-config = {version = "1.0.0", path = "../config"}

[build-dependencies]
rustc_version = "0.4.0"
