[package]
name = "girt-view"
version = "2.2.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "GPL-3.0-or-later"
description = "View modules for git-interactive-rebase-tool"
homepage = "https://gitrebasetool.mitmaro.ca/"
repository = "https://github.com/MitMaro/git-interactive-rebase-tool"
edition = "2021"
keywords = ["git", "view"]
categories = ["command-line-interface", "command-line-utilities", "text-editors"]
readme = "README.md"

[lib]
name = "view"

[features]
testutils = ["dep:bitflags"]

[dependencies]
anyhow = "1.0.68"
bitflags = { version = "1.3.2", optional = true }
captur = "0.1.0"
crossbeam-channel = "0.5.6"
parking_lot = "0.12.1"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.10"
xi-unicode = "0.3.0"
girt-display = {version = "2.2.0", path = "../display"}
girt-runtime = {version = "0.1.0", path = "../runtime"}

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng"]

[dev-dependencies]
claim = { git = "https://github.com/Turbo87/rust-claim.git", rev = "23892a3" }
girt-config = {version = "2.2.0", path = "../config"}

[build-dependencies]
rustc_version = "0.4.0"
